<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.Home_Color" >

    <Button
        android:id="@+id/button_ice"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_ice"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_fall"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_fall"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_fall"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dark" />

    <Button
        android:id="@+id/button_dark"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_vibrant" />

    <Button
        android:id="@+id/button_vibrant"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_vibrant"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_banana" />

    <Button
        android:id="@+id/button_banana"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:text="@string/text_banana"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>