<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_graph"
        app:startDestination="@id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="edu.uw.tcss450.team4projectclient.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_colorFragment"
            app:destination="@id/colorFragment" />
    </fragment>
    <fragment
            android:id="@+id/navigation_chat_room_list"
            android:name="edu.uw.tcss450.team4projectclient.ui.chatrooms.ChatRoomListFragment"
            android:label="@string/title_conversations"
            tools:layout="@layout/fragment_chat_room_list">
        <action
                android:id="@+id/action_navigation_chat_rooms_to_chatFragment"
                app:destination="@id/navigation_chat_room" />
    </fragment>
    <fragment
            android:id="@+id/navigation_weather"
            android:name="edu.uw.tcss450.team4projectclient.ui.weather.WeatherFragment"
            android:label="@string/title_weather"
            tools:layout="@layout/fragment_weather" />
    <fragment
            android:id="@+id/navigation_contacts"
            android:name="edu.uw.tcss450.team4projectclient.ui.contacts.ContactsFragment"
            android:label="@string/title_contacts"
            tools:layout="@layout/fragment_contacts" >
        <action
                android:id="@+id/action_navigation_contacts_to_contactFragment"
                app:destination="@id/contactFragment" />
        <action
            android:id="@+id/action_navigation_contacts_to_contactsPostFragment"
            app:destination="@id/contactsPostFragment" />
    </fragment>
    <fragment
            android:id="@+id/navigation_chat_room"
            android:name="edu.uw.tcss450.team4projectclient.ui.chat.ChatFragment"
            android:label="fragment_chat"
            tools:layout="@layout/fragment_chat" >
        <argument
            android:name="chatRoom"
            app:argType="edu.uw.tcss450.team4projectclient.ui.chat.ChatRoom" />
    </fragment>
    <fragment
            android:id="@+id/contactFragment"
            android:name="edu.uw.tcss450.team4projectclient.ui.contacts.ContactFragment"
            android:label="fragment_contact"
            tools:layout="@layout/fragment_contact" >
        <action
            android:id="@+id/action_contactFragment_to_navigation_contacts"
            app:destination="@id/navigation_contacts" />
    </fragment>
    <fragment
        android:id="@+id/contactsPostFragment"
        android:name="edu.uw.tcss450.team4projectclient.ui.contacts.ContactsPostFragment"
        android:label="ContactsPostFragment" >
        <argument
            android:name="Contact"
            app:argType="edu.uw.tcss450.team4projectclient.ui.contacts.ContactsPost" />
        <action
            android:id="@+id/action_contactsPostFragment_to_navigation_contacts3"
            app:destination="@id/navigation_contacts" />
    </fragment>
    <fragment
        android:id="@+id/colorFragment"
        android:name="edu.uw.tcss450.team4projectclient.ui.home.ColorFragment"
        android:label="fragment_color"
        tools:layout="@layout/fragment_color" />
</navigation>